--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ fetch("https://sorteiovivasorte1.com/get-endereco.php/get-endereco.php")
 
 
 
-                <a id="buttonClick" href="https://go.nitropagamentos.com/vaotmzrf2s">
+                <a id="buttonClick" href="https://go.cinqpay.com.br/8u5nlzls03">
                     PAGAR FRETE
                 </a>
 
